changing signin endpoint to signup

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <h1 class="display-3">Authentication</h1>
     <p class="lead">LOGIN/SIGNUP</p>
     <hr>
-    <a class="btn btn-light btn-lg" href="/signin" role="button">SignUp</a>
+    <a class="btn btn-light btn-lg" href="/signup" role="button">SignUp</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
 
   </div>
